force-app/main/default/objects/Event_Response__c/Event_Response__c.object-meta.xml
<CustomObject>
    <label>Event Response</label>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>Event Response Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>