force-app/main/default/objects/Event_Response__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Member Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>