force-app/main/default/objects/Event_Response__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>