force-app/main/default/objects/Event_Response__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>To capture the encrypted token parameter of customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>