force-app/main/default/objects/Event_Response__c/recordTypes/Events.recordType-meta.xml
<RecordType>
    <fullName>Events</fullName>
    <active>true</active>
    <description>Event Management</description>
    <label>Events</label>
</RecordType>